--- a/less/home.less
+++ b/less/home.less
@@ -17,7 +17,7 @@
 
         .content {
           .flex(column, center, center);
-          animation: growAndSkew 0.6s ease-out forwards;
+          animation: grow 0.6s ease-out;
           transform: skewX(10deg);
 
           *:not(:last-child) {
